Fix navigation link to point to index.html

--- a/chefchahouen.html
+++ b/chefchahouen.html
@@ -11,7 +11,7 @@
     <h1>Journée Internationale de la Langue Arabe</h1>
     <p>Projet : Histoire du Maroc à travers ses villes</p>
 	    <nav>
-      <a href="pageprin.html"> الصفحة الرئيسية (Home)</a>
+      <a href="index.html"> الصفحة الرئيسية (Home)</a>
     </nav>
   </header>
 
@@ -29,3 +29,4 @@
   </footer>
 </body>
 </html>
+
