--- a/stade.html
+++ b/stade.html
@@ -13,7 +13,7 @@
     <h1>Journée Internationale de la Langue Arabe</h1>
     <p>Projet : Histoire du Maroc à travers ses villes</p>
 	    <nav>
-      <a href="pageprin.html"> الصفحة الرئيسية (Home)</a>
+      <a href="index.html"> الصفحة الرئيسية (Home)</a>
     </nav>
   </header>
 
@@ -31,3 +31,4 @@
   </footer>
 </body>
 </html>
+
