--- a/casablanca.html
+++ b/casablanca.html
@@ -20,9 +20,9 @@
 <div class="container">
   <h2 style="text-align:center;">الدارالبيضاء (Casablanca)</h2>
 
-  <video class="video-centre" controls>
-    <source src="casablanca.mp4" type="video/mp4">
-  </video>
+<iframe width="100%" height="315"
+src="https://www.youtube.com/embed/watch?v=WaBPuDDvaK4"
+frameborder="0" allowfullscreen></iframe>
 </div>
 
   <footer>
@@ -30,4 +30,5 @@
   </footer>
 </body>
 </html>
+
 
