--- a/casablanca.html
+++ b/casablanca.html
@@ -21,8 +21,11 @@
   <h2 style="text-align:center;">الدارالبيضاء (Casablanca)</h2>
 
 <iframe width="100%" height="315"
-src="https://www.youtube.com/embed/watch?v=WaBPuDDvaK4"
-frameborder="0" allowfullscreen></iframe>
+src="https://www.youtube.com/embed/WaBPuDDvaK4"
+title="YouTube video player"
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+allowfullscreen></iframe>
 </div>
 
   <footer>
@@ -30,5 +33,6 @@ frameborder="0" allowfullscreen></iframe>
   </footer>
 </body>
 </html>
+
 
 
