Refactor HTML structure and iframe styling

--- a/casablanca.html
+++ b/casablanca.html
@@ -20,12 +20,14 @@
 <div class="container">
   <h2 style="text-align:center;">الدارالبيضاء (Casablanca)</h2>
 
-<iframe width="100%" height="315"
+<iframe class="video-centre"
 src="https://www.youtube.com/embed/WaBPuDDvaK4"
 title="YouTube video player"
 frameborder="0"
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-allowfullscreen></iframe>
+allowfullscreen>
+</iframe>
+
 </div>
 
   <footer>
@@ -33,6 +35,7 @@ allowfullscreen></iframe>
   </footer>
 </body>
 </html>
+
 
 
 
