Embed YouTube video instead of local video
Replaced video element with an iframe to embed a YouTube video.

--- a/fes.html
+++ b/fes.html
@@ -19,9 +19,14 @@
 <div class="container">
   <h2 style="text-align:center;">فاس (Fès)</h2>
 
-  <video class="video-centre" controls>
-    <source src="fes.mp4" type="video/mp4">
-  </video>
+<iframe class="video-centre"
+src="https://www.youtube.com/embed/2CPnRwQR2_U"
+title="YouTube video player"
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+allowfullscreen>
+</iframe>
+
 </div>
 
   <footer>
@@ -29,4 +34,5 @@
   </footer>
 </body>
 </html>
+
 
