Refactor iframe into a div wrapper in casablanca.html
Replaced iframe with a div wrapper for better styling.

--- a/casablanca.html
+++ b/casablanca.html
@@ -20,14 +20,13 @@
 <div class="container">
   <h2 style="text-align:center;">الدارالبيضاء (Casablanca)</h2>
 
-<iframe class="video-centre"
-src="https://www.youtube.com/embed/WaBPuDDvaK4"
-title="YouTube video player"
-frameborder="0"
-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-allowfullscreen>
-</iframe>
-
+<div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/WaBPuDDvaK4"
+    title="YouTube video player"
+    allowfullscreen>
+  </iframe>
+</div>
 </div>
 
   <footer>
@@ -35,6 +34,7 @@ allowfullscreen>
   </footer>
 </body>
 </html>
+
 
 
 
