--- a/fes.html
+++ b/fes.html
@@ -19,13 +19,13 @@
 <div class="container">
   <h2 style="text-align:center;">فاس (Fès)</h2>
 
-<iframe class="video-centre"
-src="https://www.youtube.com/embed/2CPnRwQR2_U"
-title="YouTube video player"
-frameborder="0"
-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-allowfullscreen>
-</iframe>
+<div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/2CPnRwQR2_U"
+    title="YouTube video player"
+    allowfullscreen>
+  </iframe>
+</div>
 
 </div>
 
@@ -34,5 +34,6 @@ allowfullscreen>
   </footer>
 </body>
 </html>
+
 
 
