Update video display to use YouTube iframe
Replaced video element with an embedded YouTube iframe for better compatibility.

--- a/marrakech.html
+++ b/marrakech.html
@@ -18,10 +18,14 @@
 
 <div class="container">
   <h2 style="text-align:center;">مراكش (Marrakech)</h2>
+<div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/CDo2hsGVa7M"
+    title="YouTube video player"
+    allowfullscreen>
+  </iframe>
+</div>
 
-  <video class="video-centre" controls>
-    <source src="marrakech.mov" type="video/mp4">
-  </video>
 </div>
 
   <footer>
@@ -29,3 +33,4 @@
   </footer>
 </body>
 </html>
+
