--- a/Oualili.html
+++ b/Oualili.html
@@ -20,9 +20,14 @@
 <div class="container">
   <h2 style="text-align:center;">وليلي (Oualili)</h2>
 
-  <video class="video-centre" controls>
-    <source src="oualili.mp4" type="video/mp4">
-  </video>
+<div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/0_L7Py4nzxE"
+    title="YouTube video player"
+    allowfullscreen>
+  </iframe>
+</div>
+
 </div>
 
   <footer>
@@ -30,4 +35,5 @@
   </footer>
 </body>
 </html>
+
 
