Update video source to YouTube in rabat.html
Replaced iframe source with a YouTube video link and added a wrapper for styling.

--- a/rabat.html
+++ b/rabat.html
@@ -28,11 +28,14 @@
 <div class="container">
   <h2 style="text-align:center;">Aperçu d'un site à propos de rabat</h2>
 
-  <iframe 
-    src="https://rabatville.mystrikingly.com/"
-    class="preview-site"
-    loading="lazy">
+<div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/A9gDyOTgzAU"
+    title="YouTube video player"
+    allowfullscreen>
   </iframe>
+</div>
+
 </div>
 
 
@@ -42,3 +45,4 @@
 </body>
 
 </html>
+
