--- a/sale.html
+++ b/sale.html
@@ -19,9 +19,14 @@
 <div class="container">
   <h2 style="text-align:center;">سلا (Salé)</h2>
 
-  <video class="video-centre" controls>
-    <source src="sale.mp4" type="video/mp4">
-  </video>
+	<div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/6uSecoLiBBY"
+    title="YouTube video player"
+    allowfullscreen>
+  </iframe>
+</div>
+
 </div>
 
   <footer>
@@ -29,4 +34,5 @@
   </footer>
 </body>
 </html>
+
 
