Update video display for Tanger page
Replaced video element with YouTube iframe for Tanger.

--- a/tanger.html
+++ b/tanger.html
@@ -19,10 +19,15 @@
 
 <div class="container">
   <h2 style="text-align:center;">طنجة (Tanger)</h2>
+	
+	<div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/buMfrWIuhUE"
+    title="YouTube video player"
+    allowfullscreen>
+  </iframe>
+</div>
 
-  <video class="video-centre" controls>
-    <source src="tanger.mov" type="video/mp4">
-  </video>
 </div>
 
   <footer>
@@ -30,4 +35,5 @@
   </footer>
 </body>
 </html>
+
 
