--- a/rabat.html
+++ b/rabat.html
@@ -20,14 +20,6 @@
 <div class="container">
   <h2 style="text-align:center;">الرباط (Rabat)</h2>
 
-  <video class="video-centre" controls>
-    <source src="rabat.mp4" type="video/mp4">
-  </video>
-</div>
-
-<div class="container">
-  <h2 style="text-align:center;">Aperçu d'un site à propos de rabat</h2>
-
 <div class="video-wrapper">
   <iframe
     src="https://www.youtube.com/embed/A9gDyOTgzAU"
@@ -36,6 +28,14 @@
   </iframe>
 </div>
 
+<div class="container">
+  <h2 style="text-align:center;">Aperçu d'un site à propos de rabat</h2>
+  <iframe 
+    src="https://rabatville.mystrikingly.com/"
+    class="preview-site"
+    loading="lazy">
+  </iframe>
+</div>
 </div>
 
 
@@ -45,4 +45,5 @@
 </body>
 
 </html>
+
 
