--- a/dakhla.html
+++ b/dakhla.html
@@ -20,9 +20,15 @@
 <div class="container">
   <h2 style="text-align:center;">الداخلة (Dakhla)</h2>
 
-  <video class="video-centre" controls>
-    <source src="dakla.mp4" type="video/mp4">
-  </video>
+	
+<div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/TNtx4ERMiSo"
+    title="YouTube video player"
+    allowfullscreen>
+  </iframe>
+</div>
+
 </div>
 
   <footer>
@@ -31,3 +37,4 @@
 </body>
 
 </html>
+
