--- a/marrakech.html
+++ b/marrakech.html
@@ -12,7 +12,7 @@
     <h1>Journée Internationale de la Langue Arabe</h1>
     <p>Projet : Histoire du Maroc à travers ses villes</p>
 	    <nav>
-      <a href="pageprin.html"> الصفحة الرئيسية (Home)</a>
+      <a href="index.html"> الصفحة الرئيسية (Home)</a>
     </nav>
   </header>
 
@@ -33,4 +33,5 @@
   </footer>
 </body>
 </html>
+
 
