--- a/chefchahouen.html
+++ b/chefchahouen.html
@@ -15,13 +15,14 @@
     </nav>
   </header>
 
+<div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/watch?v=XdI7NJ03y1I"
+    title="YouTube video player"
+    allowfullscreen>
+  </iframe>
+</div>
 
-<div class="container">
-  <h2 style="text-align:center;">شفشاون (Chefchaouen)</h2>
-
-  <video class="video-centre" controls>
-    <source src="chefchaouen.mp4" type="video/mp4">
-  </video>
 </div>
 
   <footer>
@@ -29,4 +30,5 @@
   </footer>
 </body>
 </html>
+
 
