Fix YouTube link and format HTML structure
Updated the YouTube video link and cleaned up the HTML structure.

--- a/chefchahouen.html
+++ b/chefchahouen.html
@@ -17,7 +17,7 @@
 
 <div class="video-wrapper">
   <iframe
-    src="https://www.youtube.com/watch?v=XdI7NJ03y1I"
+    src="https://youtu.be/XdI7NJ03y1I"
     title="YouTube video player"
     allowfullscreen>
   </iframe>
@@ -30,5 +30,6 @@
   </footer>
 </body>
 </html>
+
 
 
