--- a/chefchahouen.html
+++ b/chefchahouen.html
@@ -17,7 +17,7 @@
 
 <div class="video-wrapper">
   <iframe
-    src="https://youtu.be/XdI7NJ03y1I"
+    src="https://youtu.be/embed/XdI7NJ03y1I"
     title="YouTube video player"
     allowfullscreen>
   </iframe>
@@ -30,6 +30,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
